--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F8F9FA"
-    android:orientation="vertical"
     tools:context=".Screens.ProductDetailActivity">
 
     <!-- Toolbar -->
@@ -19,260 +18,182 @@
         app:layout_constraintTop_toTopOf="parent"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <ImageView
+        android:id="@+id/ivPDImage"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:scaleType="centerCrop"
+        app:layout_constraintDimensionRatio="17:14"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/detailToolbar"
+        tools:src="@drawable/img_1" />
 
-        <ImageView
-            android:id="@+id/ivPDImage"
-            android:layout_width="match_parent"
-            app:layout_constraintDimensionRatio="20:10"
-            android:layout_height="0dp"
-            android:scaleType="centerCrop"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/img_1" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:fillViewport="true"
+        android:background="@drawable/custom_product_detail"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/detailToolbar">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ivPDImage">
+
+        <TextView
+            android:id="@+id/txtPDBestSeller"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Best Seller"
+            android:paddingLeft="20dp"
+            android:textColor="#5B9EE1"
+            android:textSize="16dp" />
+
+        <TextView
+            android:id="@+id/tvPDName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            android:text="Nike Jordan"
+            android:paddingLeft="20dp"
+            android:textColor="@color/black"
+            android:textSize="24dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tvPDPrice"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:text="$967.800"
+            android:paddingLeft="20dp"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tvPDlDescription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:text="Air Jordan is an American brand of basketball shoes athletic, casual, and style clothing produced by Nike...."
+            android:textColor="#666666"
+            android:ellipsize="end"
+            android:maxLines="3"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:textSize="16dp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Gallery"
+            android:paddingLeft="20dp"
+            android:layout_marginBottom="16dp"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewVariantColor"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:orientation="horizontal"
+                android:scrollbars="none"/>
+        </LinearLayout>
+
+        <include
+            android:id="@+id/size"
+            layout="@layout/include_size"
+            android:layout_marginTop="16dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <LinearLayout
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:layout_marginTop="4dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewVariantSize"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:orientation="horizontal"
+                android:scrollbars="none"/>
+        </LinearLayout>
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/custom_product_detail"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <TextView
-                android:id="@+id/txtPDBestSeller"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:paddingLeft="20dp"
-                android:text="Best Seller"
-                android:textColor="#5B9EE1"
-                android:textSize="16dp" />
-
-            <TextView
-                android:id="@+id/tvPDName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="4dp"
-                android:paddingLeft="20dp"
-                android:text="Nike Jordan"
-                android:textColor="@color/black"
-                android:textSize="24dp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/tvPDPrice"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
-                android:paddingLeft="20dp"
-                android:text="$967.800"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/tvPDlDescription"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="6dp"
-                android:ellipsize="end"
-                android:maxLines="3"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp"
-                android:text="Air Jordan is an American brand of basketball shoes athletic, casual, and style clothing produced by Nike...."
-                android:textColor="#666666"
-                android:textSize="16dp" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
-                android:paddingLeft="20dp"
-                android:text="Gallery"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+            android:layout_marginTop="8dp"
+            android:background="@drawable/custom_detail_addtocart"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:paddingRight="20dp">
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="10dp"
+                android:orientation="vertical"
                 android:paddingLeft="20dp">
 
-                <ImageView
-                    android:id="@+id/imageColor1"
-                    android:layout_width="56dp"
-                    android:layout_height="56dp"
-                    android:layout_marginRight="16dp"
-                    android:background="@drawable/bg_color_unselected"
-                    android:src="@drawable/img_1" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recyclerViewVariantColor"
+                <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:scrollbars="none" />
-            </LinearLayout>
-
-            <include
-                android:id="@+id/size"
-                layout="@layout/include_size"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginRight="20dp" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:paddingLeft="20dp">
-
-                <TextView
-                    android:id="@+id/tvSize38"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginEnd="12dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/bg_size_unselected"
-                    android:gravity="center"
-                    android:padding="8dp"
-                    android:text="38"
-                    android:textSize="20sp" />
-
-                <TextView
-                    android:id="@+id/tvSize39"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginEnd="12dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/bg_size_unselected"
-                    android:gravity="center"
-                    android:padding="8dp"
-                    android:text="39"
-                    android:textSize="20sp" />
-
-                <TextView
-                    android:id="@+id/tvSize40"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginEnd="12dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/bg_size_unselected"
-                    android:gravity="center"
-                    android:padding="8dp"
-                    android:text="40"
-                    android:textSize="20sp" />
-
-                <TextView
-                    android:id="@+id/tvSize41"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginEnd="12dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/bg_size_unselected"
-                    android:gravity="center"
-                    android:padding="8dp"
-                    android:text="41"
-                    android:textSize="20sp" />
-
-                <TextView
-                    android:id="@+id/tvSize42"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginEnd="12dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/bg_size_unselected"
-                    android:gravity="center"
-                    android:padding="8dp"
-                    android:text="42"
-                    android:textSize="20sp" />
-
-                <TextView
-                    android:id="@+id/tvSize43"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/bg_size_unselected"
-                    android:gravity="center"
-                    android:padding="8dp"
-                    android:text="43"
-                    android:textSize="20sp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:background="@drawable/custom_detail_addtocart"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:paddingRight="20dp">
-
-                <LinearLayout
-                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="10dp"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:paddingLeft="20dp">
+                    android:layout_marginTop="16dp"
+                    android:text="Price"
+                    android:textColor="#5B9EE1"
+                    android:textSize="16dp" />
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
-                        android:text="Price"
-                        android:textColor="#5B9EE1"
-                        android:textSize="16dp" />
-
-                    <TextView
-                        android:id="@+id/tvPDValue"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:paddingBottom="6dp"
-                        android:text="$967.800"
-                        android:textColor="@color/black"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
-
-                <Button
-                    android:id="@+id/btnAddToCart"
-                    android:layout_width="0dp"
+                <TextView
+                    android:id="@+id/tvPDValue"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@drawable/custom_buttom_addtocart"
-                    android:padding="16dp"
-                    android:paddingTop="16dp"
-                    android:stateListAnimator="@null"
-                    android:text="Add To Cart"
-                    android:textColor="@color/white"
+                    android:paddingBottom="6dp"
+                    android:text="$967.800"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
                     android:textStyle="bold" />
 
-
             </LinearLayout>
 
-        </LinearLayout>
-    </ScrollView>
+            <Button
+                android:id="@+id/btnAddToCart"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/custom_buttom_addtocart"
+                android:padding="16dp"
+                android:paddingTop="16dp"
+                android:stateListAnimator="@null"
+                android:text="Add To Cart"
+                android:textColor="@color/white"
+                android:textStyle="bold" />
 
-</LinearLayout>
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
