--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,6 +5,10 @@
     android:layout_height="match_parent"
     tools:context=".NavigationBar.ProfileFragment">
 
-
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="4" />
 
 </FrameLayout>
